<resources>
    <string name="app_name">BlowOut</string>
    <string name="register">Register</string>
    <string name="login">Login</string>

    <string name="blowOutLogo">Blowout logo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confrim_password">Confirm new password</string>

    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Log me in.</string>

    <!-- Activity main drawer.xml-->
    <!-- Menu Item strings-->
    <string name="view_deposit">Deposit(s)</string>
    <string name="view_account_receivable">Account receivable(s)</string>
    <string name="loan_application">Apply loan</string>
    <string name="logout">Logout</string>
    <string name="title_activity_splash_screen">SplashScreen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
